Signup errors handled. Minlength and passwords confirm validation added.

--- a/src/app/private/pages/chat/chat.component.html
+++ b/src/app/private/pages/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="main" *ngIf="messages && messages.length > 0">
+<div class="main">
   <h2>Chat-room</h2>
   <div class="row" style="display: flex;">
     <div class="col-md-4" style="width: 600px;">
