--- a/src/app/public/pages/signup/signup.component.html
+++ b/src/app/public/pages/signup/signup.component.html
@@ -14,6 +14,7 @@
         <input id="pass" type="password" formControlName="password" placeholder="••••••••" />
         <div *ngIf="formControls.password?.touched && formControls.password?.errors">
           <div *ngIf="formControls.password?.errors?.required" class="is-invalid">Password is required</div>
+          <div *ngIf="formControls.password?.errors?.minlength" class="is-invalid">Minimum characters - 8</div>
         </div>
       </div>
 
@@ -22,6 +23,8 @@
         <input id="pass" type="password" formControlName="confirmPassword" placeholder="••••••••" />
         <div *ngIf="formControls.confirmPassword?.touched && formControls.confirmPassword?.errors">
           <div *ngIf="formControls.confirmPassword?.errors?.required" class="is-invalid">Password is required</div>
+          <div *ngIf="formControls.confirmPassword?.errors?.minlength" class="is-invalid">Minimum characters - 8</div>
+          <div *ngIf="formControls.confirmPassword?.errors?.confirmPass" class="is-invalid">Passwords do not match</div>
         </div>
       </div>
   
